--- a/src/Login.css
+++ b/src/Login.css
@@ -6,14 +6,51 @@
     align-items: center;
 
 }
+.login__logo{
+    width: 100px;
+    object-fit: contain;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 .login__container{
-    display: flex;
-    align-items: center;
-    border: gray;
     width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid lightgray;
+
+    
     
 }
-.login__signInButton{
-    display: flex;
+.login__signInButton, .login__registerButton{
+    background-color: #f0c14b;
+    border: 1px solid;
+    margin-top: 10px;
+    height: 20px;
+    border-radius:2px ;
+    color: #111;
+    border-color: #a88734 #9c7e31 #845a29;
+    /* display: flex; */
+    margin-bottom: 10px;
 
 }
+.login__container p {
+    margin-top: 15px;
+    font-size: 12px;
+    text-align: center;
+}
+.login__container > h1{
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.login__container > form > h5{
+
+    margin-bottom: 5px ;
+}
+.login__container > form> input{
+    height: 25px;
+    margin-bottom: 10px;
+    background-color: white;
+    width: 98%;
+}
+
