--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .nav_bar_wrapper a{
     padding-left: 30px;
 }
+
+.delete{
+    background-color: #c21a1a;
+    color: white;
+    padding: 4px;
+    border-radius: 5px;
+    cursor: pointer;
+}
